--- a/long_transformer/run_config.yaml
+++ b/long_transformer/run_config.yaml
@@ -1,12 +1,12 @@
 task: ext
 mode: train
 
-bert_data_path: ./multi_news_bert_shards
+bert_data_path: ./multi_news_bert_shards/multi_news.bert_data
 model_path: ./models/
 result_path: /results/multinews
 temp_dir: ./temp
 
-model_config: model_config.yaml
+model_config_path: model_config.yaml
 checkpoint: null
 
 
@@ -22,6 +22,8 @@ report_rouge: True
 batch_size: 2000
 test_batch_size: 200
 
+max_pos: 512 
+use_interval: True
 
 # hyperparameters
 ## param init 
@@ -54,7 +56,7 @@ max_tgt_len: 200
 ext_predict_nsents: 10
 
 # gpu
-visible_gpus: '0'
+visible_gpus: '-1'
 gpu_ranks: '0'
 world_size: 1
 seed: 666
