--- a/long_transformer/model_config.yaml
+++ b/long_transformer/model_config.yaml
@@ -9,6 +9,7 @@ norm_first: False
 num_encoder_blocks: 2
 layer_norm_eps: 1.0e-6
 d_ff: 2048
+max_position_embeddings: 5000
 
 bert_config:
     vocab_size: 28997
