--- a/long_transformer/model_config.yaml
+++ b/long_transformer/model_config.yaml
@@ -11,12 +11,15 @@ layer_norm_eps: 1.0e-6
 d_ff: 2048
 max_position_embeddings: 5000
 
-bert_config:
-    vocab_size: 28997
-    hidden_size: 768
-    pad_token_id: 0
-    hidden_dropout_prob: 0.1
-    type_vocab_size: 2
-    type_doc_size: 2
-    max_position_embeddings: 5000
-    position_embedding_type: absolute
+bert_model: bert-base-cased
+type_doc_size: 2
+
+# bert_config:
+#     vocab_size: 28997
+#     hidden_size: 768
+#     pad_token_id: 0
+#     hidden_dropout_prob: 0.1
+#     type_vocab_size: 2
+#     type_doc_size: 2
+#     max_position_embeddings: 5000
+#     position_embedding_type: absolute
