--- a/long_transformer/val_config.yaml
+++ b/long_transformer/val_config.yaml
@@ -22,7 +22,8 @@ report_rouge: True
 batch_size: 3000
 test_batch_size: 200
 
-max_pos: 2000
+max_pos: 512
+max_position_embeddings: 512
 use_interval: True
 
 # hyperparameters
@@ -60,4 +61,6 @@ visible_gpus: '0'
 gpu_ranks: '0'
 world_size: 1
 seed: 666
+
+test_all: true
 
