--- a/long_transformer/model_config.yaml
+++ b/long_transformer/model_config.yaml
@@ -5,11 +5,11 @@ freeze_bert: False
 d_model: 768
 num_heads: 8
 dropout: 0.1 
-norm_first: False
+norm_first: True
 num_encoder_blocks: 2
 layer_norm_eps: 1.0e-6
 d_ff: 2048
-max_position_embeddings: 512
+max_position_embeddings: 1000
 
 bert_model: bert-base-cased
 type_doc_size: 2
