--- a/long_transformer/model_config.yaml
+++ b/long_transformer/model_config.yaml
@@ -9,9 +9,10 @@ norm_first: True
 num_encoder_blocks: 2
 layer_norm_eps: 1.0e-6
 d_ff: 2048
-max_position_embeddings: 1000
+max_position_embeddings: 512
 
-bert_model: bert-base-cased
+# bert_model: bert-base-cased
+bert_model: allenai/led-base-16384
 type_doc_size: 2
 
 # bert_config:
