--- a/long_transformer/test_config.yaml
+++ b/long_transformer/test_config.yaml
@@ -11,7 +11,7 @@ checkpoint: null
 
 
 train_from: null
-test_from: /content/gdrive/MyDrive/__projects/thesis/bertext/saved_models/model_step_13000.pt
+test_from: /content/gdrive/MyDrive/__projects/thesis/bertext/saved_models/model_step_20000.pt
 log_file: ./logs/model_log
 
 block_trigram: True
@@ -22,7 +22,8 @@ report_rouge: True
 batch_size: 3000
 test_batch_size: 200
 
-max_pos: 2000
+max_pos: 1000
+max_position_embeddings: 1000
 use_interval: True
 
 # hyperparameters
