--- a/viet_summ/model_config.yaml
+++ b/viet_summ/model_config.yaml
@@ -12,7 +12,7 @@ d_ff: 2048
 max_position_embeddings: 512
 
 # bert_model: bert-base-cased
-bert_model: vinai/bert-base
+bert_model: vinai/phobert-base
 type_doc_size: 2
 
 # bert_config:
