--- a/long_transformer/run_config.yaml
+++ b/long_transformer/run_config.yaml
@@ -10,7 +10,7 @@ model_config_path: model_config.yaml
 checkpoint: null
 
 
-train_from: null
+train_from: /content/gdrive/MyDrive/__projects/thesis/bertext/saved_models_led/model_step_20000.pt
 test_from: null
 log_file: ./logs/model_log
 
@@ -32,7 +32,7 @@ param_init: 0
 param_init_glorot: True
 ## optimizer
 optim: adam
-lr: 1.0e-2
+lr: 2.0e-3
 beta1: 0.9
 beta2: 0.999
 warmup_steps: 8000
@@ -42,9 +42,9 @@ max_grad_norm: 0
 
 # train phase
 save_checkpoint_steps: 1000
-accum_count: 2
+accum_count: 5
 report_every: 100
-train_steps: 20000
+train_steps: 30000
 recall_eval: False
 ## trainer 
 label_smoothing: 0.1
