--- a/viet_summ/run_config.yaml
+++ b/viet_summ/run_config.yaml
@@ -19,7 +19,7 @@ report_rouge: True
 
 
 # general
-batch_size: 3000
+batch_size: 120
 test_batch_size: 200
 
 max_pos: 512
@@ -34,16 +34,17 @@ param_init_glorot: True
 optim: adam
 lr: 2.0e-3
 lr_bert: 2.0e-3
+lr_dec: 0.2
 beta1: 0.9
 beta2: 0.999
 warmup_steps: 8000
-warmup_steps_bert: 8000
-warmup_step_dec: 8000
+warmup_steps_bert: 20000
+warmup_steps_dec: 10000
 max_grad_norm: 0
 
 # train phase
 save_checkpoint_steps: 1000
-accum_count: 2
+accum_count: 5
 report_every: 100
 train_steps: 20000
 recall_eval: False
@@ -67,4 +68,4 @@ seed: 666
 test_all: true
 
 load_from_extractive: ""
-sep_optim: False
+sep_optim: True
