--- a/long_transformer/model_config.yaml
+++ b/long_transformer/model_config.yaml
@@ -1,15 +1,23 @@
 
 
 model_name: basic_abs
+vocab_size: null
 freeze_bert: False
 d_model: 768
 num_heads: 8
 dropout: 0.1 
 norm_first: True
 num_encoder_blocks: 2
+num_decoder_blocks: 2
 layer_norm_eps: 1.0e-6
 d_ff: 2048
 max_position_embeddings: 512
+
+dec_layers: 6
+dec_hidden_size: 768
+dec_heads: 8
+dec_ff_size: 2048
+dec_dropout: 0.2
 
 bert_model: bert-base-cased
 # bert_model: allenai/led-base-16384
