--- a/long_transformer/run_config.yaml
+++ b/long_transformer/run_config.yaml
@@ -10,7 +10,7 @@ model_config_path: model_config.yaml
 checkpoint: null
 
 
-train_from: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_led/model_step_20000.pt
+train_from: null
 test_from: null
 log_file: ./logs/model_log
 
@@ -33,18 +33,20 @@ param_init_glorot: True
 ## optimizer
 optim: adam
 lr: 2.0e-3
+lr_bert: 2.0e-3
+lr_dec: 0.2
 beta1: 0.9
 beta2: 0.999
 warmup_steps: 8000
-warmup_steps_bert: 8000
-warmup_step_dec: 8000
+warmup_steps_bert: 20000
+warmup_steps_dec: 10000
 max_grad_norm: 0
 
 # train phase
-save_checkpoint_steps: 1000
+save_checkpoint_steps: 4000
 accum_count: 5
 report_every: 100
-train_steps: 30000
+train_steps: 50000
 recall_eval: False
 ## trainer 
 label_smoothing: 0.1
@@ -64,3 +66,6 @@ seed: 666
 
 
 test_all: true
+
+load_from_extractive: ""
+sep_optim: True
