--- a/viet_summ/val_config.yaml
+++ b/viet_summ/val_config.yaml
@@ -1,4 +1,4 @@
-task: ext
+task: abs
 mode: validate
 
 bert_data_path: ./vietnews_bert_data_shards/vietnews.bert_data
@@ -19,7 +19,7 @@ report_rouge: True
 
 
 # general
-batch_size: 3000
+batch_size: 500
 test_batch_size: 200
 
 max_pos: 512
@@ -33,18 +33,20 @@ param_init_glorot: True
 ## optimizer
 optim: adam
 lr: 1.0e-4
+lr_bert: 2.0e-3
+lr_dec: 0.2
 beta1: 0.9
 beta2: 0.999
 warmup_steps: 8000
-warmup_steps_bert: 8000
-warmup_step_dec: 8000
+warmup_steps_bert: 20000
+warmup_steps_dec: 10000
 max_grad_norm: 0
 
 # train phase
-save_checkpoint_steps: 1000
+save_checkpoint_steps: 4000
 accum_count: 2
 report_every: 100
-train_steps: 20000
+train_steps: 50000
 recall_eval: False
 ## trainer 
 label_smoothing: 0.1
@@ -64,3 +66,7 @@ seed: 666
 
 test_all: true
 
+load_from_extractive: ""
+sep_optim: True
+
+test_start_from: -1
