--- a/long_transformer/test_config.yaml
+++ b/long_transformer/test_config.yaml
@@ -1,9 +1,9 @@
-task: ext
+task: abs
 mode: test
 
-bert_data_path: ./multi_news_bert_shards/multi_news.bert_data
-model_path: /content/gdrive/MyDrive/__projects/thesis/bertext/saved_models/
-result_path: /content/gdrive/MyDrive/__projects/thesis/bertext
+bert_data_path: ./abs_bert_data_shards/multi_news_abs.bert_data
+model_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2/
+result_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2/
 temp_dir: ./temp
 
 model_config_path: model_config.yaml
@@ -11,7 +11,7 @@ checkpoint: null
 
 
 train_from: null
-test_from: /content/gdrive/MyDrive/__projects/thesis/bertext/saved_models/model_step_20000.pt
+test_from: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2/model_step_8000.pt
 log_file: ./logs/model_log
 
 block_trigram: True
@@ -19,11 +19,11 @@ report_rouge: True
 
 
 # general
-batch_size: 3000
-test_batch_size: 200
+batch_size: 500
+test_batch_size: 1000
 
-max_pos: 1000
-max_position_embeddings: 1000
+max_pos: 512
+max_position_embeddings: 512
 use_interval: True
 
 # hyperparameters
@@ -32,7 +32,7 @@ param_init: 0
 param_init_glorot: True
 ## optimizer
 optim: adam
-lr: 1.0e-4
+lr: 2.0e-3
 beta1: 0.9
 beta2: 0.999
 warmup_steps: 8000
@@ -42,7 +42,7 @@ max_grad_norm: 0
 
 # train phase
 save_checkpoint_steps: 1000
-accum_count: 2
+accum_count: 5
 report_every: 100
 train_steps: 20000
 recall_eval: False
@@ -51,10 +51,10 @@ label_smoothing: 0.1
 generator_shard_size: 32
 alpha: 0.6 
 beam_size: 5
-min_length: 5
-max_length: 15
+min_length: 100
+max_length: 150
 max_tgt_len: 200 
-ext_predict_nsents: 10
+ext_predict_nsents: 20
 
 # gpu
 visible_gpus: '0'
@@ -62,3 +62,8 @@ gpu_ranks: '0'
 world_size: 1
 seed: 666
 
+test_all: true
+load_from_extractive: ""
+sep_optim: True
+
+test_start_from: -1
