--- a/viet_summ/val_config.yaml
+++ b/viet_summ/val_config.yaml
@@ -11,7 +11,7 @@ checkpoint: null
 
 
 train_from: null
-test_from: null
+test_from: ""
 log_file: ./logs/model_log
 
 block_trigram: True
@@ -20,7 +20,7 @@ report_rouge: True
 
 # general
 batch_size: 500
-test_batch_size: 500
+test_batch_size: 1000
 
 max_pos: 512
 max_position_embeddings: 512
@@ -53,8 +53,8 @@ label_smoothing: 0.1
 generator_shard_size: 32
 alpha: 0.6 
 beam_size: 5
-min_length: 5
-max_length: 15
+min_length: 30
+max_length: 40
 max_tgt_len: 200 
 ext_predict_nsents: 4
 
