--- a/viet_summ/config/ext/model_config.yaml
+++ b/viet_summ/config/ext/model_config.yaml
@@ -14,6 +14,7 @@ max_position_embeddings: 512
 # bert_model: bert-base-cased
 bert_model: vinai/phobert-base
 type_doc_size: 2
+padding_idx: 1
 
 # bert_config:
 #     vocab_size: 28997
