--- a/viet_summ/model_config.yaml
+++ b/viet_summ/model_config.yaml
@@ -23,6 +23,7 @@ dec_dropout: 0.2
 # bert_model: bert-base-cased
 bert_model: vinai/phobert-base
 type_doc_size: 2
+padding_idx: 1
 
 # bert_config:
 #     vocab_size: 28997
