--- a/long_transformer/old_configs/ultimate_led_ext/val_config.yaml
+++ b/long_transformer/old_configs/ultimate_led_ext/val_config.yaml
@@ -19,8 +19,8 @@ report_rouge: True
 
 
 # general
-batch_size: 1500
-test_batch_size: 200
+batch_size: 500
+test_batch_size: 500
 
 max_pos: 1024
 max_position_embeddings: 1024
@@ -45,7 +45,7 @@ save_checkpoint_steps: 1000
 accum_count: 5
 report_every: 100
 train_steps: 20000
-recall_eval: False
+recall_eval: True
 ## trainer 
 label_smoothing: 0.1
 generator_shard_size: 32
@@ -54,7 +54,7 @@ beam_size: 5
 min_length: 5
 max_length: 15
 max_tgt_len: 200 
-ext_predict_nsents: 10
+ext_predict_nsents: 20
 
 # gpu
 visible_gpus: '0'
