--- a/long_transformer/old_configs/ultimate_led_ext/data_gen.yaml
+++ b/long_transformer/old_configs/ultimate_led_ext/data_gen.yaml
@@ -6,12 +6,12 @@ model_path: /content/gdrive/MyDrive/__projects/thesis/bertext/saved_models_led/
 result_path: /content/gdrive/MyDrive/__projects/thesis/bertext/saved_models_led/
 temp_dir: ./temp
 
-model_config_path: model_config.yaml
+model_config_path: ./old_configs/ultimate_led_ext/model_config.yaml
 checkpoint: null
 
 
 train_from: null
-test_from: /content/gdrive/MyDrive/__projects/thesis/bertext/saved_models_led/model_step_19000.pt
+test_from: /content/gdrive/MyDrive/__projects/thesis/bertext/saved_models_led/model_step_25000.pt
 log_file: ./logs/model_log
 
 block_trigram: True
@@ -45,7 +45,7 @@ save_checkpoint_steps: 1000
 accum_count: 5
 report_every: 100
 train_steps: 20000
-recall_eval: False
+recall_eval: True
 ## trainer 
 label_smoothing: 0.1
 generator_shard_size: 32
@@ -54,7 +54,7 @@ beam_size: 5
 min_length: 5
 max_length: 15
 max_tgt_len: 200 
-ext_predict_nsents: 15
+ext_predict_nsents: 20
 
 # gpu
 visible_gpus: '0'
