--- a/long_transformer/old_configs/ultimate_led_ext/run_config.yaml
+++ b/long_transformer/old_configs/ultimate_led_ext/run_config.yaml
@@ -6,11 +6,12 @@ model_path: /content/gdrive/MyDrive/__projects/thesis/bertext/saved_models_led/
 result_path: /content/gdrive/MyDrive/__projects/thesis/bertext/saved_models_led/
 temp_dir: ./temp
 
-model_config_path: model_config.yaml
+model_config_path: ./old_configs/ultimate_led_ext/model_config.yaml
 checkpoint: null
 
 
-train_from: /content/gdrive/MyDrive/__projects/thesis/bertext/saved_models_led/model_step_20000.pt
+# train_from: /content/gdrive/MyDrive/__projects/thesis/bertext/saved_models_led/model_step_20000.pt
+train_from: null
 test_from: null
 log_file: ./logs/model_log
 
@@ -19,7 +20,7 @@ report_rouge: True
 
 
 # general
-batch_size: 1500
+batch_size: 500
 test_batch_size: 200
 
 max_pos: 1024
