--- a/long_transformer/run_config.yaml
+++ b/long_transformer/run_config.yaml
@@ -10,8 +10,8 @@ model_config_path: model_config.yaml
 checkpoint: null
 
 
-train_from: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2/model_step_49000.pt
-# train_from: null
+# train_from: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2/model_step_49000.pt
+train_from: null
 test_from: null
 log_file: ./logs/model_log
 
@@ -54,9 +54,9 @@ label_smoothing: 0.1
 generator_shard_size: 32
 alpha: 0.6 
 beam_size: 5
-min_length: 200
-max_length: 500
-max_tgt_len: 200 
+min_length: 150
+max_length: 512
+max_tgt_len: 512 
 ext_predict_nsents: 10
 
 # gpu
