--- a/long_transformer/old_configs/bert_abs_finest/run_config.yaml
+++ b/long_transformer/old_configs/bert_abs_finest/run_config.yaml
@@ -2,16 +2,16 @@ task: abs
 mode: train
 
 bert_data_path: ./abs_bert_data_shards/multi_news_abs.bert_data
-model_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2_2/
-result_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2_2/
+model_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2/
+result_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2/
 temp_dir: ./temp
 
 model_config_path: model_config.yaml
 checkpoint: null
 
 
-# train_from: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2_2/model_step_15000.pt
-train_from: null
+train_from: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2/model_step_15000.pt
+# train_from: null
 test_from: null
 log_file: ./logs/model_log
 
@@ -47,7 +47,7 @@ max_grad_norm: 0
 save_checkpoint_steps: 1000
 accum_count: 5
 report_every: 100
-train_steps: 25000
+train_steps: 50000
 recall_eval: False
 ## trainer 
 label_smoothing: 0.1
@@ -55,8 +55,8 @@ generator_shard_size: 32
 alpha: 0.6 
 beam_size: 5
 min_length: 150
-max_length: 800
-max_tgt_len: 800 
+max_length: 512
+max_tgt_len: 512 
 ext_predict_nsents: 10
 
 # gpu
