--- a/long_transformer/old_configs/bert_abs_finest/test_config.yaml
+++ b/long_transformer/old_configs/bert_abs_finest/test_config.yaml
@@ -1,18 +1,17 @@
 task: abs
-mode: train
+mode: test
 
 bert_data_path: ./abs_bert_data_shards/multi_news_abs.bert_data
-model_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2_2/
-result_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2_2/
+model_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2/
+result_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2/part_2
 temp_dir: ./temp
 
 model_config_path: model_config.yaml
 checkpoint: null
 
 
-# train_from: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2_2/model_step_15000.pt
 train_from: null
-test_from: null
+test_from: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2/model_step_49000.pt
 log_file: ./logs/model_log
 
 block_trigram: True
@@ -20,8 +19,8 @@ report_rouge: True
 
 
 # general
-batch_size: 1000
-test_batch_size: 200
+batch_size: 500
+test_batch_size: 2500
 
 max_pos: 512
 max_position_embeddings: 512
@@ -34,30 +33,28 @@ param_init_glorot: True
 ## optimizer
 optim: adam
 lr: 2.0e-3
-lr_bert: 2.0e-3
-lr_dec: 0.2
 beta1: 0.9
 beta2: 0.999
 warmup_steps: 8000
-warmup_steps_bert: 20000
-warmup_steps_dec: 10000
+warmup_steps_bert: 8000
+warmup_step_dec: 8000
 max_grad_norm: 0
 
 # train phase
 save_checkpoint_steps: 1000
 accum_count: 5
 report_every: 100
-train_steps: 25000
-recall_eval: False
+train_steps: 20000
+recall_eval: True
 ## trainer 
 label_smoothing: 0.1
 generator_shard_size: 32
 alpha: 0.6 
 beam_size: 5
 min_length: 150
-max_length: 800
-max_tgt_len: 800 
-ext_predict_nsents: 10
+max_length: 512
+max_tgt_len: 512 
+ext_predict_nsents: 20
 
 # gpu
 visible_gpus: '0'
@@ -65,8 +62,8 @@ gpu_ranks: '0'
 world_size: 1
 seed: 666
 
-
 test_all: true
-
 load_from_extractive: ""
 sep_optim: True
+
+test_start_from: -1
