--- a/long_transformer/val_config.yaml
+++ b/long_transformer/val_config.yaml
@@ -2,11 +2,11 @@ task: abs
 mode: validate
 
 bert_data_path: ./abs_bert_data_shards/multi_news_abs.bert_data
-model_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2/
-result_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2/
+model_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2_2/
+result_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2_2/
 temp_dir: ./temp
 
-model_config_path: ./old_configs/ultimate_led_ext/model_config.yaml
+model_config_path: model_config.yaml
 checkpoint: null
 
 
@@ -19,7 +19,7 @@ report_rouge: True
 
 
 # general
-batch_size: 500
+batch_size: 1000
 test_batch_size: 2000
 
 max_pos: 512
@@ -52,8 +52,8 @@ generator_shard_size: 32
 alpha: 0.6 
 beam_size: 5
 min_length: 150
-max_length: 512
-max_tgt_len: 512 
+max_length: 800
+max_tgt_len: 800 
 ext_predict_nsents: 20
 
 # gpu
