--- a/long_transformer/old_configs/bert_abs_finest_finest/run_config.yaml
+++ b/long_transformer/old_configs/bert_abs_finest_finest/run_config.yaml
@@ -1,7 +1,7 @@
 task: abs
-mode: validate
+mode: train
 
-bert_data_path: ./abs_bert_data_shards_filtered/multi_news_abs.bert_data
+bert_data_path: ./abs_bert_data_shards/multi_news_abs.bert_data
 model_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2_2/
 result_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2_2/
 temp_dir: ./temp
@@ -10,6 +10,7 @@ model_config_path: model_config.yaml
 checkpoint: null
 
 
+# train_from: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2_2/model_step_25000.pt
 train_from: null
 test_from: null
 log_file: ./logs/model_log
@@ -19,8 +20,8 @@ report_rouge: True
 
 
 # general
-batch_size: 5000
-test_batch_size: 2000
+batch_size: 1000
+test_batch_size: 200
 
 max_pos: 512
 max_position_embeddings: 512
@@ -33,19 +34,21 @@ param_init_glorot: True
 ## optimizer
 optim: adam
 lr: 2.0e-3
+lr_bert: 2.0e-3
+lr_dec: 0.2
 beta1: 0.9
 beta2: 0.999
 warmup_steps: 8000
-warmup_steps_bert: 8000
-warmup_step_dec: 8000
+warmup_steps_bert: 20000
+warmup_steps_dec: 10000
 max_grad_norm: 0
 
 # train phase
 save_checkpoint_steps: 1000
 accum_count: 5
 report_every: 100
-train_steps: 20000
-recall_eval: True
+train_steps: 25000
+recall_eval: False
 ## trainer 
 label_smoothing: 0.1
 generator_shard_size: 32
@@ -54,7 +57,7 @@ beam_size: 5
 min_length: 150
 max_length: 800
 max_tgt_len: 800 
-ext_predict_nsents: 20
+ext_predict_nsents: 10
 
 # gpu
 visible_gpus: '0'
@@ -62,8 +65,8 @@ gpu_ranks: '0'
 world_size: 1
 seed: 666
 
+
 test_all: true
+
 load_from_extractive: ""
 sep_optim: True
-
-test_start_from: -1
