--- a/long_transformer/old_configs/bert_abs_finest_finest/test_config.yaml
+++ b/long_transformer/old_configs/bert_abs_finest_finest/test_config.yaml
@@ -1,9 +1,9 @@
 task: abs
-mode: validate
+mode: test
 
 bert_data_path: ./abs_bert_data_shards_filtered/multi_news_abs.bert_data
 model_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2_2/
-result_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2_2/
+result_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2_2/part_filtered_1
 temp_dir: ./temp
 
 model_config_path: model_config.yaml
@@ -11,7 +11,7 @@ checkpoint: null
 
 
 train_from: null
-test_from: null
+test_from: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2_2/model_step_24000.pt
 log_file: ./logs/model_log
 
 block_trigram: True
@@ -19,8 +19,8 @@ report_rouge: True
 
 
 # general
-batch_size: 5000
-test_batch_size: 2000
+batch_size: 500
+test_batch_size: 2500
 
 max_pos: 512
 max_position_embeddings: 512
@@ -53,7 +53,7 @@ alpha: 0.6
 beam_size: 5
 min_length: 150
 max_length: 800
-max_tgt_len: 800 
+max_tgt_len: 1024 
 ext_predict_nsents: 20
 
 # gpu
