--- a/long_transformer/old_configs/vietnews/model_config.yaml
+++ b/long_transformer/old_configs/vietnews/model_config.yaml
@@ -1,7 +1,7 @@
 
 
-model_name: led_abs
-vocab_size: 50265
+model_name: vi_basic_abs
+vocab_size: null
 freeze_bert: False
 d_model: 768
 num_heads: 8
@@ -11,17 +11,19 @@ num_encoder_blocks: 2
 num_decoder_blocks: 2
 layer_norm_eps: 1.0e-6
 d_ff: 2048
-max_position_embeddings: 1024
+max_position_embeddings: 512
 
-dec_layers: 4
+
+dec_layers: 6
 dec_hidden_size: 768
 dec_heads: 8
 dec_ff_size: 2048
 dec_dropout: 0.2
 
 # bert_model: bert-base-cased
-bert_model: allenai/led-base-16384
+bert_model: vinai/phobert-base
 type_doc_size: 2
+padding_idx: 1
 
 # bert_config:
 #     vocab_size: 28997
