--- a/long_transformer/old_configs/vietnews/run_config.yaml
+++ b/long_transformer/old_configs/vietnews/run_config.yaml
@@ -1,16 +1,15 @@
 task: abs
 mode: train
 
-bert_data_path: ./multi_news_bert_led_shards/multi_news.bert_data
-model_path: /content/gdrive/MyDrive/__projects/thesis/abs/led_abs/saved_models/
-result_path: /content/gdrive/MyDrive/__projects/thesis/abs/led_abs/saved_models/
+bert_data_path: ./vietnews_bert_data_shards/vietnews.bert_data
+model_path: /content/gdrive/MyDrive/__projects/thesis/bertext/vietnews_saved_models_abs/
+result_path: /content/gdrive/MyDrive/__projects/thesis/bertext/vietnews_saved_models_abs/
 temp_dir: ./temp
 
 model_config_path: model_config.yaml
 checkpoint: null
 
 
-# train_from: /content/gdrive/MyDrive/__projects/thesis/abs/led_abs/saved_models/model_step_25000.pt
 train_from: null
 test_from: null
 log_file: ./logs/model_log
@@ -23,8 +22,8 @@ report_rouge: True
 batch_size: 500
 test_batch_size: 200
 
-max_pos: 1024
-max_position_embeddings: 1024
+max_pos: 512
+max_position_embeddings: 512
 use_interval: True
 
 # hyperparameters
@@ -35,7 +34,7 @@ param_init_glorot: True
 optim: adam
 lr: 2.0e-3
 lr_bert: 2.0e-3
-lr_dec: 0.2
+lr_dec: 0.02
 beta1: 0.9
 beta2: 0.999
 warmup_steps: 8000
@@ -44,19 +43,19 @@ warmup_steps_dec: 10000
 max_grad_norm: 0
 
 # train phase
-save_checkpoint_steps: 1000
+save_checkpoint_steps: 2000
 accum_count: 5
 report_every: 100
-train_steps: 25000
+train_steps: 20000
 recall_eval: False
 ## trainer 
 label_smoothing: 0.1
 generator_shard_size: 32
 alpha: 0.6 
 beam_size: 5
-min_length: 150
-max_length: 800
-max_tgt_len: 800 
+min_length: 5
+max_length: 40
+max_tgt_len: 200 
 ext_predict_nsents: 10
 
 # gpu
@@ -70,3 +69,4 @@ test_all: true
 
 load_from_extractive: ""
 sep_optim: True
+test_start_from: -1
