--- a/long_transformer/old_configs/vietnews_abs/test_config.yaml
+++ b/long_transformer/old_configs/vietnews_abs/test_config.yaml
@@ -2,11 +2,11 @@ task: abs
 mode: test
 
 bert_data_path: ./vietnews_bert_data_shards/vietnews.bert_data
-model_path: /content/gdrive/MyDrive/__projects/thesis/bertext/vietnews_saved_models_abs/
-result_path: /content/gdrive/MyDrive/__projects/thesis/bertext/vietnews_saved_models_abs/
+model_path: /content/gdrive/MyDrive/__projects/thesis/abs/vietnews_abs/saved_models/
+result_path: /content/gdrive/MyDrive/__projects/thesis/abs/vietnews_abs/saved_models/
 temp_dir: ./temp
 
-model_config_path: model_config.yaml
+model_config_path: ./old_configs/vietnews_abs/model_config.yaml
 checkpoint: null
 
 
