--- a/long_transformer/old_configs/bert_abs_finest_finest/run_config.yaml
+++ b/long_transformer/old_configs/bert_abs_finest_finest/run_config.yaml
@@ -6,7 +6,7 @@ model_path: /content/gdrive/MyDrive/__projects/thesis/abs/led_bert_abs/saved_mod
 result_path: /content/gdrive/MyDrive/__projects/thesis/abs/led_bert_abs/saved_models/
 temp_dir: ./temp
 
-model_config_path: model_config.yaml
+model_config_path: ./old_configs/bert_abs_finest_finest/model_config.yaml
 checkpoint: null
 
 
@@ -55,8 +55,8 @@ generator_shard_size: 32
 alpha: 0.6 
 beam_size: 5
 min_length: 150
-max_length: 700
-max_tgt_len: 700 
+max_length: 600
+max_tgt_len: 600 
 ext_predict_nsents: 10
 
 # gpu
