--- a/long_transformer/old_configs/bert_abs_finest_finest/run_config.yaml
+++ b/long_transformer/old_configs/bert_abs_finest_finest/run_config.yaml
@@ -11,7 +11,7 @@ checkpoint: null
 
 
 train_from: /content/gdrive/MyDrive/__projects/thesis/abs/led_bert_abs/saved_models/model_step_25000.pt
-train_from: null
+# train_from: null
 test_from: null
 log_file: ./logs/model_log
 
