--- a/long_transformer/run_config.yaml
+++ b/long_transformer/run_config.yaml
@@ -10,7 +10,7 @@ model_config_path: model_config.yaml
 checkpoint: null
 
 
-# train_from: /content/gdrive/MyDrive/__projects/thesis/abs/led_abs/saved_models/model_step_25000.pt
+train_from: /content/gdrive/MyDrive/__projects/thesis/abs/led_abs/saved_models/model_step_6000.pt
 train_from: null
 test_from: null
 log_file: ./logs/model_log
