--- a/long_transformer/old_configs/ultimate_led_ext/data_gen.yaml
+++ b/long_transformer/old_configs/ultimate_led_ext/data_gen.yaml
@@ -1,9 +1,9 @@
 task: data_gen
 mode: test
 
-bert_data_path: ./multi_news_bert_led_shards/multi_news.bert_data
-model_path: /content/gdrive/MyDrive/__projects/thesis/bertext/saved_models_led/
-result_path: /content/gdrive/MyDrive/__projects/thesis/bertext/saved_models_led/
+bert_data_path: ./multi_news_bert_led_ext_shards/multi_news.bert_data
+model_path: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models_5/
+result_path: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models_5/
 temp_dir: ./temp
 
 model_config_path: ./old_configs/ultimate_led_ext/model_config.yaml
@@ -11,7 +11,7 @@ checkpoint: null
 
 
 train_from: null
-test_from: /content/gdrive/MyDrive/__projects/thesis/bertext/saved_models_led/model_step_25000.pt
+test_from: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models_5/model_step_7000.pt
 log_file: ./logs/model_log
 
 block_trigram: True
@@ -19,11 +19,11 @@ report_rouge: True
 
 
 # general
-batch_size: 1500
-test_batch_size: 200
+batch_size: 10000
+test_batch_size: 10000
 
-max_pos: 1024
-max_position_embeddings: 1024
+max_pos: 8000
+max_position_embeddings: 8000
 use_interval: True
 
 # hyperparameters
@@ -45,7 +45,7 @@ save_checkpoint_steps: 1000
 accum_count: 5
 report_every: 100
 train_steps: 20000
-recall_eval: True
+recall_eval: False
 ## trainer 
 label_smoothing: 0.1
 generator_shard_size: 32
