--- a/long_transformer/old_configs/ultimate_led_ext/run_config.yaml
+++ b/long_transformer/old_configs/ultimate_led_ext/run_config.yaml
@@ -10,8 +10,8 @@ model_config_path: ./old_configs/ultimate_led_ext/model_config.yaml
 checkpoint: null
 
 
-train_from: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models_5/model_step_2000.pt
-# train_from: null
+# train_from: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models_5/model_step_2000.pt
+train_from: null
 test_from: null
 log_file: ./logs/model_log
 
@@ -20,7 +20,7 @@ report_rouge: True
 
 
 # general
-batch_size: 2000
+batch_size: 4000
 test_batch_size: 200
 
 max_pos: 4000
@@ -29,17 +29,33 @@ use_interval: True
 
 # hyperparameters
 ## param init 
+# param_init: 0
+# param_init_glorot: True
+# ## optimizer
+# optim: adam
+# lr: 2.0e-3
+# beta1: 0.9
+# beta2: 0.999
+# warmup_steps: 8000
+# warmup_steps_bert: 8000
+# warmup_step_dec: 8000
+# max_grad_norm: 0
+
 param_init: 0
 param_init_glorot: True
 ## optimizer
 optim: adam
 lr: 2.0e-3
+lr_bert: 2.0e-3
+lr_dec: 0.2
 beta1: 0.9
 beta2: 0.999
 warmup_steps: 8000
-warmup_steps_bert: 8000
-warmup_step_dec: 8000
+warmup_steps_bert: 20000
+warmup_steps_dec: 10000
 max_grad_norm: 0
+
+
 
 # train phase
 save_checkpoint_steps: 1000
@@ -65,3 +81,4 @@ seed: 666
 
 
 test_all: true
+sep_optim: True
