--- a/long_transformer/old_configs/ultimate_led_ext/run_config.yaml
+++ b/long_transformer/old_configs/ultimate_led_ext/run_config.yaml
@@ -2,8 +2,8 @@ task: ext
 mode: train
 
 bert_data_path: ./multi_news_bert_led_ext_shards/multi_news.bert_data
-model_path: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models/
-result_path: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models/
+model_path: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models_5/
+result_path: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models_5/
 temp_dir: ./temp
 
 model_config_path: ./old_configs/ultimate_led_ext/model_config.yaml
@@ -23,8 +23,8 @@ report_rouge: True
 batch_size: 2000
 test_batch_size: 200
 
-max_pos: 4000
-max_position_embeddings: 4000
+max_pos: 8000
+max_position_embeddings: 8000
 use_interval: True
 
 # hyperparameters
@@ -81,4 +81,4 @@ seed: 666
 
 
 test_all: true
-sep_optim: True
+sep_optim: False
