--- a/long_transformer/old_configs/ultimate_led_ext/run_config.yaml
+++ b/long_transformer/old_configs/ultimate_led_ext/run_config.yaml
@@ -10,8 +10,8 @@ model_config_path: ./old_configs/ultimate_led_ext/model_config.yaml
 checkpoint: null
 
 
-# train_from: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models/model_step_2000.pt
-train_from: null
+train_from: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models/model_step_10000.pt
+# train_from: null
 test_from: null
 log_file: ./logs/model_log
 
@@ -61,7 +61,7 @@ max_grad_norm: 0
 save_checkpoint_steps: 1000
 accum_count: 5
 report_every: 100
-train_steps: 20000
+train_steps: 25000
 recall_eval: False
 ## trainer 
 label_smoothing: 0.1
