--- a/long_transformer/old_configs/led_abs/val_config.yaml
+++ b/long_transformer/old_configs/led_abs/val_config.yaml
@@ -1,17 +1,16 @@
 task: abs
-mode: train
+mode: validate
 
 bert_data_path: ./multi_news_bert_led_abs_shards/multi_news.bert_data
 model_path: /content/gdrive/MyDrive/__projects/thesis/abs/led_abs/saved_models/
 result_path: /content/gdrive/MyDrive/__projects/thesis/abs/led_abs/saved_models/
 temp_dir: ./temp
 
-model_config_path: model_config.yaml
+model_config_path: ./old_configs/led_abs_8000/model_config.yaml
 checkpoint: null
 
 
-train_from: /content/gdrive/MyDrive/__projects/thesis/abs/led_abs/saved_models/model_step_40000.pt
-# train_from: null
+train_from: null
 test_from: null
 log_file: ./logs/model_log
 
@@ -20,11 +19,11 @@ report_rouge: True
 
 
 # general
-batch_size: 200
-test_batch_size: 200
+batch_size: 2000
+test_batch_size: 2000
 
-max_pos: 4000
-max_position_embeddings: 4000
+max_pos: 8000
+max_position_embeddings: 8000
 use_interval: True
 
 # hyperparameters
@@ -34,21 +33,19 @@ param_init_glorot: True
 ## optimizer
 optim: adam
 lr: 2.0e-3
-lr_bert: 2.0e-3
-lr_dec: 0.2
 beta1: 0.9
 beta2: 0.999
 warmup_steps: 8000
-warmup_steps_bert: 40000
-warmup_steps_dec: 30000
+warmup_steps_bert: 8000
+warmup_step_dec: 8000
 max_grad_norm: 0
 
 # train phase
 save_checkpoint_steps: 1000
 accum_count: 5
 report_every: 100
-train_steps: 50000
-recall_eval: False
+train_steps: 20000
+recall_eval: True
 ## trainer 
 label_smoothing: 0.1
 generator_shard_size: 32
@@ -56,8 +53,8 @@ alpha: 0.6
 beam_size: 5
 min_length: 150
 max_length: 1024
-max_tgt_len: 2048 
-ext_predict_nsents: 10
+max_tgt_len: 1024 
+ext_predict_nsents: 20
 
 # gpu
 visible_gpus: '0'
@@ -65,8 +62,8 @@ gpu_ranks: '0'
 world_size: 1
 seed: 666
 
-
 test_all: true
-
 load_from_extractive: ""
 sep_optim: True
+
+test_start_from: -1
