--- a/long_transformer/old_configs/ultimate_led_ext/test_config.yaml
+++ b/long_transformer/old_configs/ultimate_led_ext/test_config.yaml
@@ -6,12 +6,12 @@ model_path: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models/
 result_path: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models/
 temp_dir: ./temp
 
-model_config_path: model_config.yaml
+model_config_path: ./old_configs/ultimate_led_ext/model_config.yaml
 checkpoint: null
 
 
 train_from: null
-test_from: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models/model_step_29000.pt
+test_from: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models/model_step_37000.pt
 log_file: ./logs/model_log
 
 block_trigram: True
