--- a/long_transformer/demo.yaml
+++ b/long_transformer/demo.yaml
@@ -11,7 +11,7 @@ checkpoint: null
 
 
 train_from: null
-test_from: ./saved_models/led_abs_model
+test_from: ./saved_models/led_abs_model.pt
 log_file: ./logs/model_log
 
 block_trigram: True
